syntax = "proto3";

package myserver;

service Greeter {
  rpc CreateCert(ServerRequest) returns (ServerReply) {}
  rpc UpdateCert(ServerRequest) returns (ServerReply) {}
  rpc RevokeCert(ServerRequest) returns (ServerReply) {}
}

message ServerRequest{
  string data= 1;
}

message ServerReply{
  string response= 1;
}
